# lab1

./: CMakeLists.txt  LICENSE  README.md  dialog.cpp  dialog.hpp  main  main.cpp  table.cpp  table.hpp
